2007-12-28  Laurent Debacker <debackerl@gmail.com> 

	* Ribbon.cs, ToggleButton.cs, RibbonGroup.cs, Tile.cs, Gallery.cs, Theme.cs,
	  gtk-gui/generated.cs, gtk-gui/objects.xml, gtk-gui/gui.stetic,
	  Ribbons.mdp, Button.cs, ChangeLog: Fixing calls to Dispose() and
	  Destroy()
