@@ -1,0 +1,9 @@
+using System;
+
+namespace Ribbons
+{
+	public enum Position
+	{
+		Top, Right, Bottom, Left
+	}
+}
